--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <div class="card">
       <div class="img__container">
         <a href="#" class="img__link">
-          <img id="equilibrium" class="img" src="../nft-preview-card-component-main/images/image-equilibrium.jpg" alt="image of Equilibrium">
+          <img id="equilibrium" class="img" src="../images/image-equilibrium.jpg" alt="image of Equilibrium">
           <div class="img__overlay">
-            <img src="../nft-preview-card-component-main/images/icon-view.svg" alt="icon">
+            <img src="../icon-view.svg" alt="icon">
           </div>
         </a>
       </div>
@@ -42,7 +42,7 @@
 		  </div>
       <div class="line"></div>
       <div class="creator">
-        <img id="avatar" src="../nft-preview-card-component-main/images/image-avatar.png" alt="a picture of the creator">
+        <img id="avatar" src="../images/image-avatar.png" alt="a picture of the creator">
         <p class="creator__text">Creation of<a href="#" class="creator__name">Jules Wyvern</a></p>
       </div>
     </div>
