--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
   <link rel="stylesheet" href="../styles/main.css">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
   
   <title>Frontend Mentor | NFT preview card component</title>
 </head>
