--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   
-  <link rel="stylesheet" href="../styles/main.css">
+  <link rel="stylesheet" href="../
+nft-priview-card-solution /styles/main.css">
 
   <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
   
