--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Frontend Mentor | NFT preview card component</title>
 </head>
 <body>
-  <div class="container">
+  <div class="container" role="main">
     <div class="card">
       <div class="img__container">
         <a href="#" class="img__link">
@@ -21,25 +21,24 @@
           </div>
         </a>
       </div>
-      
       <h1 class="header"><a href="#" class="header__link">Equilibrium #3429</a></h1>
-			<p class="card__text">
-				 Our Equilibrium collection promotes balance and calm.
-			</p>
-			<div class="offer">
+        <p class="card__text">
+	   Our Equilibrium collection promotes balance and calm.
+        </p>
+      <div class="offer">
         <div class="container__price"> 
           <svg id="ether" width="11" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M11 10.216 5.5 18 0 10.216l5.5 3.263 5.5-3.262ZM5.5 0l5.496 9.169L5.5 12.43 0 9.17 5.5 0Z" fill="#00FFF8"/></svg>
-				  <p class="price">
-					0,041ETH
-				  </p>
+	     <p class="price">
+		0,041ETH
+	     </p>
         </div>
         <div class="container__time-left">
           <svg id="clock" width="17" height="17" xmlns="http://www.w3.org/2000/svg"><path d="M8.305 2.007a6.667 6.667 0 1 0 0 13.334 6.667 6.667 0 0 0 0-13.334Zm2.667 7.334H8.305a.667.667 0 0 1-.667-.667V6.007a.667.667 0 0 1 1.334 0v2h2a.667.667 0 0 1 0 1.334Z" fill="#8BACD9"/></svg>
           <p class="time-left">
             3 days left
           </p>
-        </div>
-		  </div>
+       </div>
+      </div>
       <div class="line"></div>
       <div class="creator">
         <img id="avatar" src="./images/image-avatar.png" alt="a picture of the creator">
@@ -47,7 +46,7 @@
       </div>
     </div>
   </div>
-  <div class="attribution">
+  <div class="attribution" role="contentinfo">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Thomas</a>.
   </div>
