--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="#" class="img__link">
           <img id="equilibrium" class="img" src="./images/image-equilibrium.jpg" alt="image of Equilibrium">
           <div class="img__overlay">
-            <img src="./icon-view.svg" alt="icon">
+            <img src="./images/icon-view.svg" alt="icon">
           </div>
         </a>
       </div>
